# audio-txt

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
scripts/: create_desktop_shortcut.ps1
src/audiotxt/: __init__.py  cli.py  config.py  file_utils.py  gui.py  manifest.py  outputs.py  pipeline.py  quality.py  watcher.py
src/audiotxt/transcribers/: __init__.py  base.py  faster_whisper_transcriber.py  gemini_transcriber.py
tests/: smoke_test.py  test_cli.py  test_config.py  test_file_utils.py  test_gui.py  test_manifest.py  test_outputs.py  test_pipeline.py  test_quality.py  test_transcriber.py
