[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-txt"
version = "0.1.0"
description = "Local-first folder-drop audio transcription for Windows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
local = ["faster-whisper>=1.0"]
gemini = ["google-genai>=1.0"]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
